# HyperSync

./: .dockerignore  .env.template  Cargo.toml  Dockerfile  build-docker.ps1  eslint.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20251028_132417_user.rs  m20251028_134907_favorite.rs  m20251101_200037_watch_state.rs
src/: main.rs
src-frontend/: index.tsx
src-frontend/app/components/: app.tsx
src-frontend/app/scripts/: app.ts  configs.ts
src-frontend/app/styles/: app.css  app.module.css
src-frontend/dashboard/components/: add_user.tsx  dashboard.tsx  user.tsx
src-frontend/dashboard/scripts/: user.ts
src-frontend/dashboard/styles/: add_user.module.css  dashboard.module.css  user.module.css
src-frontend/dashboard/types/: user.ts
src/configs/: env.rs
src/entities/: favorite.rs  mod.rs  prelude.rs  user.rs  watch_state.rs
src/methods/: mod.rs
src/methods/rest/admin/: create_user.rs  delete_user.rs  get_all_user.rs  login.rs  mod.rs  verify.rs
src/methods/rest/user/: chaneg_password.rs  change_password.rs  login.rs  mod.rs  verify.rs  watch_state.rs
src/methods/rest/user/favorite/: add.rs  get.rs
src/methods/rest/user/watch_state/: add.rs  get.rs
src/methods/socket/: mod.rs  watch_state.rs
src/middleware/: auth_user.rs  ip_log.rs  mod.rs
src/models/: auth_user.rs  error.rs  mod.rs  user.rs  watch_state.rs
src/rest_methods/: login.rs
src/rest_methods/admin/: create_user.rs  login.rs  verify.rs
src/rest_methods/user/: login.rs  mod.rs
src/rest_methods/user/favorite/: add.rs
src/routes/: mod.rs  rest.rs  rest_routes.rs  socket.rs
src/utils/: database.rs  decrypt.rs  encrypt.rs  mod.rs
src/worker/favorite/: clean_empty_tags.rs  mod.rs
