[package]
name = "HyperionServer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = {version = "1.48.0", features = ["full"]}
sea-orm = { version = "1.1.17", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
lazy_static = "1.5.0"
dashmap = "6.1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
dotenv = "0.15.0"