[package]
name = "HyperSync"
version = "0.1.0"
edition = "2024"


[dependencies]
migration = { path = "migration" }


axum = "0.8.6"
tokio = {version = "1.48.0", features = ["full"]}
sea-orm = { version = "1.1.17", features = [ 
    "sqlx-mysql", # `DATABASE_DRIVER` feature
    "runtime-tokio-rustls", 
    "macros" 
] }
lazy_static = "1.5.0"
dashmap = "6.1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
dotenv = "0.15.0"
tower-http = {version = "0.6.6", features = ["fs", "cors"]}
tower = "0.5.2"
tower_governor = "0.8.0"
serde = "1.0.228"
serde_json = "1.0.145"
orion = "0.17.11"
rand = "0.9.2"
base64 = "0.22.1"
uuid = { version = "1.4", features = ["v7"] }
chrono = "0.4.42"
